--- a/SAM/Views/SystemAdmin/Facilities.cshtml
+++ b/SAM/Views/SystemAdmin/Facilities.cshtml
@@ -56,6 +56,7 @@
                                 <th><i class="bi bi-briefcase"></i> Company</th>
                             }
                             <th><i class="bi bi-geo-alt"></i> City, State</th>
+                            <th><i class="bi bi-map"></i> County</th>
                             <th class="table-actions"><i class="bi bi-gear"></i> Actions</th>
                         </tr>
                     </thead>
@@ -75,6 +76,7 @@
                                     <td><i class="bi bi-briefcase me-1"></i>@facility.CompanyName</td>
                                 }
                                 <td><i class="bi bi-geo-alt me-1"></i>@facility.City, @facility.State</td>
+                                <td><i class="bi bi-map me-1"></i>@facility.County</td>
                                 <td class="table-actions">
                                     <a asp-action="FacilityEdit" asp-route-id="@facility.Id" class="btn btn-sm btn-outline-primary">
                                         <i class="bi bi-pencil"></i> Edit
