--- a/SAM/Views/SystemAdmin/FacilityDetails.cshtml
+++ b/SAM/Views/SystemAdmin/FacilityDetails.cshtml
@@ -41,7 +41,11 @@
             <dt class="col-sm-3"><i class="bi bi-geo-alt me-1"></i>Address:</dt>
             <dd class="col-sm-9">
                 @Model.Address<br />
-                @Model.City, @Model.State @Model.ZipCode
+                @Model.City, @Model.State @Model.ZipCode<br />
+                @if (!string.IsNullOrWhiteSpace(Model.County))
+                {
+                    <span><i class="bi bi-map me-1"></i>@Model.County County</span>
+                }
             </dd>
         </dl>
     </div>
