--- a/SAM/Views/SystemAdmin/Partials/_FacilityCreateFormPartial.cshtml
+++ b/SAM/Views/SystemAdmin/Partials/_FacilityCreateFormPartial.cshtml
@@ -90,6 +90,16 @@
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-6">
+            <div class="mb-3">
+                <label asp-for="County" class="form-label"></label>
+                <input asp-for="County" class="form-control" />
+                <span asp-validation-for="County" class="text-danger"></span>
+            </div>
+        </div>
+    </div>
 </div>
 
 
