--- a/SAM/wwwroot/css/custom.scss
+++ b/SAM/wwwroot/css/custom.scss
@@ -17,6 +17,7 @@
 @import 'components/forms';
 @import 'components/tables';
 @import 'components/cards';
+@import 'components/dashboard';
 @import 'components/badges';
 @import 'components/modals';
 @import 'components/navigation';
