--- a/SAM/Views/Shared/Partials/_Navigation.cshtml
+++ b/SAM/Views/Shared/Partials/_Navigation.cshtml
@@ -30,6 +30,27 @@
                 <span class="nav-link-text">Dashboard</span>
             </a>
         </li>
+        <li class="nav-item" role="none">
+            <a class="nav-link" asp-controller="Analytics" asp-action="Index" role="menuitem" data-tooltip="Analytics">
+                <i class="bi bi-bar-chart-line"></i>
+                <span class="nav-link-text">Analytics</span>
+            </a>
+        </li>
+        @if (isTechnician)
+        {
+            <li class="nav-item" role="none">
+                <a class="nav-link" asp-controller="OperationalData" asp-action="WWChars" role="menuitem" data-tooltip="Wastewater Monitoring">
+                    <i class="bi bi-droplet-half"></i>
+                    <span class="nav-link-text">Wastewater Monitoring</span>
+                </a>
+            </li>
+            <li class="nav-item" role="none">
+                <a class="nav-link" asp-controller="OperationalData" asp-action="GWMonits" role="menuitem" data-tooltip="Groundwater Monitoring">
+                    <i class="bi bi-water"></i>
+                    <span class="nav-link-text">Groundwater Monitoring</span>
+                </a>
+            </li>
+        }
 
         @if (isCompanyAdmin)
         {
@@ -80,31 +101,6 @@
                         <a class="nav-link" asp-controller="SystemAdmin" asp-action="MonitoringWells" role="menuitem" data-tooltip="Monitoring Wells">
                             <i class="bi bi-water"></i>
                             <span class="nav-link-text">Monitoring Wells</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-        }
-
-        @if (isTechnician)
-        {
-            <li class="nav-item nav-dropdown-item" role="none">
-                <button class="nav-dropdown-toggle" type="button" aria-expanded="false" aria-controls="dropdown-monitoring" data-dropdown="monitoring" data-tooltip="Monitoring">
-                    <i class="bi bi-clipboard-data"></i>
-                    <span class="nav-link-text">Monitoring</span>
-                    <i class="bi bi-chevron-down nav-dropdown-chevron"></i>
-                </button>
-                <ul class="nav-dropdown" id="dropdown-monitoring" role="menu">
-                    <li class="nav-item" role="none">
-                        <a class="nav-link" asp-controller="OperationalData" asp-action="WWChars" role="menuitem" data-tooltip="Wastewater Monitoring">
-                            <i class="bi bi-droplet-half"></i>
-                            <span class="nav-link-text">Wastewater Monitoring</span>
-                        </a>
-                    </li>
-                    <li class="nav-item" role="none">
-                        <a class="nav-link" asp-controller="OperationalData" asp-action="GWMonits" role="menuitem" data-tooltip="Groundwater Monitoring">
-                            <i class="bi bi-water"></i>
-                            <span class="nav-link-text">Groundwater Monitoring</span>
                         </a>
                     </li>
                 </ul>
