--- a/SAM/Views/_ViewImports.cshtml
+++ b/SAM/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using SAM
+@using SAM
 @using SAM.Models
 @using SAM.ViewModels.Common
 @using SAM.ViewModels.SystemAdmin
@@ -6,5 +6,6 @@
 @using SAM.ViewModels.Reports
 @using SAM.ViewModels.UserManagement
 @using SAM.ViewModels.Dashboard
+@using SAM.ViewModels.Analytics
 @using SAM.ViewModels.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
